--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,25 @@
 logging.level.org.springframework.web=DEBUG
-spring.datasource.url=jdbc:postgresql://localhost/KinopoiskCamunda
+spring.datasource.url=jdbc:postgresql://localhost/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 camunda.bpm.admin-user.id=demo
 camunda.bpm.admin-user.password=demo
 camunda.bpm.webapp.index-redirect-enabled=true
+camunda.bpm.database.type=postgres
+camunda.bpm.database.schema-update=false
+camunda.bpm.database.table-prefix=camunda
+camunda.bpm.database.schema-name=FileApplicationD
+
+
+spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres
+spring.liquibase.user=postgres
+spring.liquibase.password=postgres
+spring.liquibase.change-log=classpath:/liquibase/changelog.yml
+spring.liquibase.default-schema=kinopoisk
+
+feign.client.config.default.connect-timeout=5000
+feign.client.config.default.read-timeout=5000
+feign.client.config.default.logger-level=basic
