--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ camunda.bpm.admin-user.password=demo
 camunda.bpm.webapp.index-redirect-enabled=true
 camunda.bpm.database.type=postgres
 camunda.bpm.database.schema-update=false
-camunda.bpm.database.table-prefix=camunda
-camunda.bpm.database.schema-name=FileApplicationD
+camunda.bpm.database.table-prefix=camunda.
+camunda.bpm.database.schema-name=camunda
 
 
 spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres
@@ -23,3 +23,7 @@ spring.liquibase.default-schema=kinopoisk
 feign.client.config.default.connect-timeout=5000
 feign.client.config.default.read-timeout=5000
 feign.client.config.default.logger-level=basic
+
+
+kinopoiskHDId=4824a95e60a7db7e86f14137516ba590
+kinopoisk.api.url=https://kinopoiskapiunofficial.tech/documentation/api/#/
