--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ camunda.bpm.database.schema-update=false
 camunda.bpm.database.table-prefix=camunda.
 camunda.bpm.database.schema-name=camunda
 
+camunda.bpm.filter.create=all
 
 spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres
 spring.liquibase.user=postgres
