--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.21'
 
     implementation('org.springframework.cloud:spring-cloud-starter-openfeign:4.0.3')
 
