--- a/src/main/resources/liquibase/1_0_0/scripts/application_table.yml
+++ b/src/main/resources/liquibase/1_0_0/scripts/application_table.yml
@@ -5,7 +5,7 @@ databaseChangeLog:
       author: ykudashkina
       changes:
         - createTable:
-            schemaName: kinopoisk
+            schemaName: camunda
             tableName: application
             remarks: Таблица c заявками
             columns:
