--- a/src/main/resources/liquibase/1_0_0/scripts/film_table.yml
+++ b/src/main/resources/liquibase/1_0_0/scripts/film_table.yml
@@ -5,7 +5,7 @@ databaseChangeLog:
       author: ykudashkina
       changes:
         - createTable:
-            schemaName: kinopoisk
+            schemaName: camunda
             tableName: film
             remarks: Таблица с фильмами
             columns:
