--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 logging.level.org.springframework.web=DEBUG
-spring.datasource.url=jdbc:postgresql://localhost/postgres
+spring.datasource.url=jdbc:postgresql://localhost/postgres?currentSchema=camunda
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.generate-ddl=true
@@ -19,7 +19,7 @@ spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
 spring.liquibase.change-log=classpath:/liquibase/changelog.yml
-spring.liquibase.default-schema=kinopoisk
+spring.liquibase.default-schema=camunda
 
 feign.client.config.default.connect-timeout=5000
 feign.client.config.default.read-timeout=5000
@@ -27,4 +27,6 @@ feign.client.config.default.logger-level=basic
 
 
 kinopoiskHDId=6f050821-baae-4c2f-968a-65071e17fb8e
-kinopoisk.api.url=https://kinopoiskapiunofficial.tech/documentation/api/#/
+kinopoisk.api.url=https://kinopoiskapiunofficial.tech/documentation/api
+
+#logging.level.sql=trace
