--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,8 @@ feign.client.config.default.read-timeout=5000
 feign.client.config.default.logger-level=basic
 
 
-kinopoiskHDId=6f050821-baae-4c2f-968a-65071e17fb8e
-kinopoisk.api.url=https://kinopoiskapiunofficial.tech/documentation/api
+X-API-KEY=6f050821-baae-4c2f-968a-65071e17fb8e
+#kinopoisk.api.url=https://kinopoiskapiunofficial.tech/documentation/api
+kinopoisk.api.url=https://kinopoiskapiunofficial.tech/api
 
 #logging.level.sql=trace
