--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ feign.client.config.default.connect-timeout=5000
 feign.client.config.default.read-timeout=5000
 feign.client.config.default.logger-level=basic
 
-
+ev_name=MessageName
 X-API-KEY=6f050821-baae-4c2f-968a-65071e17fb8e
 #kinopoisk.api.url=https://kinopoiskapiunofficial.tech/documentation/api
 kinopoisk.api.url=https://kinopoiskapiunofficial.tech/api
