--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,6 @@ dependencies {
 
     implementation('org.springframework.cloud:spring-cloud-starter-openfeign:4.0.3')
 
-//    implementation 'org.springframework.cloud:spring-cloud-starter-config'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-
     // https://mvnrepository.com/artifact/io.github.microutils/kotlin-logging
     implementation group: 'io.github.microutils', name: 'kotlin-logging', version: '1.6.22'
 
@@ -65,6 +62,14 @@ dependencies {
 
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.module/jackson-module-kotlin
     implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.14.2'
+
+    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui
+    //implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:1.6.4'
+
+
+    // https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+
 
     // https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter
 //    implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
