--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,16 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
 
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.5'
+
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
+    //implementation 'org.springframework.boot:spring-boot-devtools:3.0.6'
+
+    // https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.5'
+    implementation 'io.micrometer:micrometer-core:1.10.5'
+
     dependencyManagement {
         imports {
             mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.0'
